# stl_to_nifti

./: Cargo.toml  SegMesh.stl
src/: main.rs
