[package]
name = "stl_to_nifti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.2", features = ["rayon"]}
ndarray = { version = "0.15.6", features=["rayon"] }
nifti = { version = "0.15.0", features =["ndarray", "ndarray_volumes"] }
pk_stl = "0.3.1"
rayon = "1.6.0"